fixes searching repository

--- a/index.html
+++ b/index.html
@@ -114,7 +114,7 @@
                   </div>
                 </li>
               </ul>
-              <a href="/#search/<%= login %>/repos" class="btn btn-link">Show Repos</a>
+              <a href="#search/<%= login %>/repos" class="btn btn-link">Show Repos</a>
             <% } else { %>
               <div class="alert alert-warning">
                 <%= error.statusText %>
